# heliodata

./: CLAUDE.md  README.md  heliodata.toml  pyproject.toml  setup.py
example/: sdo_aia.md
examples/: README.md  advanced_usage.py  download_example.py
heliodata/download/: sdo_aia_euv.py  sdo_hmi_mag.py  solo_eui_fsi.py  solo_phi_fdt.py  stereo_secchi_euvi.py
scripts/: sdo_aia_euv.sh  sdo_hmi_mag.sh  solo_eui_fsi.sh  solo_phi_fdt.sh  stereo_secchi_euvi.sh
scripts/download/: sdo_aia_euv.sh  sdo_aia_euv_month.sh  sdo_aia_uv.sh  sdo_aia_vis.sh  sdo_hmi_mag.sh  soho_eit.sh  soho_eit_url.sh  soho_mdi.sh  solo.sh  solo_eui_fsi.sh  solo_eui_hri.sh  solo_phi_hrt.sh  stereo_secchi_euvi.sh
src/heliodata/: __init__.py  cli.py  config.py  exceptions.py
src/heliodata/dl/: sdo_aia_euv.py  sdo_aia_sdoml.py  sdo_hmi.py  soho_eit.py  stereo_secchi_euvi.py
src/heliodata/dl2/: solo_phi.py  stereo_euvi.py
src/heliodata/download/: __init__.py  sdo_aia.py  sdo_hmi.py  soho_eit.py  soho_eit_url.py  soho_mdi.py  solo.py  solo_eui.py  solo_eui_fsi.py  solo_eui_hri.py  solo_phi.py  solo_phi_fdt.py  stereo_euvi.py  stereo_secchi_euvi.py  util.py
src/heliodata/download_alt/: drms_export.py  drms_url.py  sdo_aia_euv.py  sdo_aia_heliocloud.py  sdo_aia_synoptic.py  sdo_hmi.py  soho_eit.py  stereo_secchi_euvi.py  util.py
src/heliodata/search/: sdo_aia.py
