[project]
name = "heliodata"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy[all]>=6.1.7",
    "loguru>=0.7.3",
    "sunpy-soar>=1.11.1",
    "sunpy[all]>=6.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
