[project]
name = "heliodata"
version = "0.2.0"
description = "Heliosphere Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy[all]>=6.1.7",
    "sunpy[all]>=6.0.5",
    "sunpy-soar>=1.11.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"